# AI-Algo-Trading

./: .env.example  .gitignore  Dockerfile  README.md  README_HF.md  SETUP.md  app.py  kill.py  main.py  pyproject.toml  railway.toml  requirements.txt
agent/: __init__.py  graph.py  nodes.py  psychology_guard.py  state.py
brokers/: alpaca_broker.py  base.py  zerodha_broker.py
config/: __init__.py  config.yaml  encryption.py  holidays.yaml  loader.py  security.py
dashboard/: __init__.py  api.py
data/: __init__.py  market_data.py  news_fetcher.py  sentiment.py
db/: database.py  models.py  queries.py
docs/: index.html
docs/adr/: 001-architecture.md
logs/: __init__.py
notifications/: daily_summary.py  email_alert.py  sms_alert.py  tax_export.py
risk/: __init__.py  risk_manager.py
strategy/: __init__.py  backtester.py  base.py  breakout.py  hybrid.py  indicators.py  ma_crossover.py  mean_reversion.py  momentum.py  rsi_divergence.py  sentiment_strategy.py  signal_generator.py  volume_price.py
tests/: conftest.py  test_agent.py  test_brokers.py  test_config.py  test_dashboard.py  test_db.py  test_market_data.py  test_news_fetcher.py  test_notifications.py  test_risk.py  test_security.py  test_sentiment.py  test_strategies.py  test_tax_summary.py
